--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
 					<div class="container">
 						<div class="section-title text-center mb-5">
 							<span>Our Service</span>
-							<h2>We Provide Fastest & Unique Business Growing Service</h2>
+							<h2>Providing Quality Services Globally</h2>
 							
 						</div>
 						<div class="row pt-45">
@@ -205,7 +205,7 @@
 										<h3>Website Development</h3>
 									</a>
 									<p>
-										Crafting user-centric websites, from coding to CMS. Tailored to your needs for an exhilarating user experience. Elevate your online presence.
+										Crafting user-centric websites, from coding to CMS. Tailored to your needs for an exhilarating user experience. Elevate your<br> online presence.
 									</p>
 								</div>
 							</div>
@@ -299,9 +299,8 @@
 							<div class="history-info-wrap">
 								<div class="section-title title-anim">
 									<span>Our History</span>
-									<h2>Where innovation is meets excellence</h2>
-									<p>There are many variations of passages of Lorem Ipsum available, but the majority
-										have suffered alteration in some form, by injected humour</p>
+									<h2>Oriented Digital Marketing Services</h2>
+									<p>Get the best digital marketing services to elevate your business towards growth and success.Build your success story with our dgital marketing services.</p>
 								</div>
 								<div class="listing-box history-listing-box mt-4">
 									<div class="single-listing-box fade_left">
@@ -309,9 +308,8 @@
 											<img src="assets/images/icon/consulting.svg" alt="">
 										</div>
 										<div class="listing-box-info">
-											<h2>Lumina Consulting</h2>
-											<p>There are many variations of passages of Lorem Ipsum available but the
-												majority have suffered alternative</p>
+											<h2>Search Engine Optimization</h2>
+											<p>We have a team of experts to look after your SEO needs.From keyword research to appearing top in search results, we have you covered with our expertise.</p>
 										</div>
 									</div>
 									<div class="single-listing-box fade_left">
@@ -319,9 +317,8 @@
 											<img src="assets/images/icon/expert.svg" alt="">
 										</div>
 										<div class="listing-box-info">
-											<h2>Expert Engineers</h2>
-											<p>There are many variations of passages of Lorem Ipsum available but the
-												majority have suffered alternative</p>
+											<h2>Lead Generation</h2>
+											<p>We provide custom solutions to get maximum customers through paid campaigns, performance marketing and other lead generation strategies.</p>
 										</div>
 									</div>
 								</div>
