--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
 					<div class="row justify-content-center mb-5">
 						<div class="col-lg-9">
 							<div class="section-title text-center title-anim">
-								<span>Clients Review</span>
+								<span>Why Choose Us </span>
 								<h2>Guiding You Towards Prosperity and Achievement</h2>
 							</div>
 						</div>
@@ -417,8 +417,8 @@
 										</clipPath>
 										</defs>
 									</svg>
-									<h3>Education</h3>
-									<p>posuoorti ver laoreematti ullamcorper posturer</p>
+									<h3>Team of Experts </h3>
+									<p>Our team of experts having deep knowledge in the IT domain offers services as per latest technologies and market trends.</p>
 								</div>
 							</div>
 							<div class="col fade_left">
@@ -428,8 +428,9 @@
 										<path d="M21.4336 35.0606L27.5528 41.1798L42.8508 25.8818" stroke="currentColor" stroke-width="3" stroke-linecap="round" stroke-linejoin="round"/>
 										</svg>
 										
-									<h3>Education</h3>
-									<p>posuoorti ver laoreematti ullamcorper posturer</p>
+									<h3>Custom Solutions </h3>
+									<p>Our team understand requirement of every customer and offer custom solutions based on their requirements to get the best results.
+									</p>
 								</div>
 							</div>
 							<div class="col fade_left">
@@ -440,8 +441,8 @@
 										<path d="M15.3895 15.1005L8.8393 17.2839L2.28906 6.36685L6.65588 2L17.573 8.55024L15.3895 15.1005ZM15.3895 15.1005L24.1288 23.8397" stroke="currentColor" stroke-width="3" stroke-linecap="round" stroke-linejoin="round"/>
 										<path d="M25.6501 29.6221C23.0446 22.974 23.554 14.251 28.9253 8.87968C34.2966 3.50836 44.2091 2.32943 49.6677 5.60455L40.2786 14.9936L39.406 24.5999L49.0122 23.7272L58.4013 14.3382C61.6765 19.7967 60.4976 29.7094 55.1263 35.0807C49.7548 40.452 41.032 40.9614 34.384 38.3556" stroke="currentColor" stroke-width="3" stroke-linecap="round" stroke-linejoin="round"/>
 									</svg>
-									<h3>Education</h3>
-									<p>posuoorti ver laoreematti ullamcorper posturer</p>
+									<h3>Competitive Pricing</h3>
+									<p>We offer services at a very competitive price range based on budget and customer requirements without compromising with the quality.</p>
 								</div>
 							</div>
 						</div>
