--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@
 						<div class="col-lg-9">
 							<div class="section-title text-center title-anim">
 								<span>Why Choose Us </span>
-								<h2>Guiding You Towards Prosperity and Achievement</h2>
+								<h2> choose us for success</h2>
 							</div>
 						</div>
 					</div>
