--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
 
 			<!-- About -->
 
-			<section class="about-area pt-120 pb-120" id="About">
+			<!-- <section class="about-area pt-120 pb-120" id="About">
 				<div class="container">
 					<div class="row justify-content-between align-items-center">
 						<div class="col-lg-6 col-xl-6 order-1 order-lg-0 mobt-35">
@@ -240,7 +240,7 @@
 						</div>
 					</div>
 				</div>
-			</section>
+			</section> -->
 
 			<!-- About End -->
 
