--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@
 						<div class="col-lg-9">
 							<div class="section-title text-center title-anim">
 								<span>Why Choose Us </span>
-								<h2> choose us for success</h2>
+								<h2> Choose Us For A Proven Path To Success & Growth</h2>
 							</div>
 						</div>
 					</div>
