--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 
 			<!-- Counter -->
 
-			<!-- <section class="counter-area" style="margin-bottom: 100px;">
+			<section class="counter-area" style="margin-bottom: 100px;">
 				<div class="container">
 					<div class="row">
 						<div class="col-lg-12">
@@ -204,64 +204,9 @@
 						</div>
 					</div>
 				</div>
-			</section> -->
+			</section>
 
-			<div class="gallery-area pb-96">
-				<div class="container">
-					<div class="row justify-content-center">
-						<div class="col-lg-7">
-							<div class="section-title text-center text-anim">
-								<span>WHY CHOOSE US</span>
-								<h2>Choose Us For A Proven Path To Success & Growth</h2>
-							</div>
-						</div>
-					</div>
-					<div class="row mt-60">
-						<div class="col-lg-4 col-md-6 fade_left">
-							<div class="gallery-box position-relative">
-								<img class="w-100" src="assets/images/gallery/gallery-img-1.png" alt="">
-								<div class="gallery-hover-info-wrap position-absolute">
-									<div class="gallery-hover-info">
-										<h2>Custom Solutions</h2>
-										<p>Our team understand requirement of every customer and offer custom solutions based on their requirements to get the best results.</p>
-									</div>
-									<a href="project-details.html"><svg width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
-										<path d="M23.9099 7.5V19.6875C23.9099 20.0605 23.7617 20.4181 23.498 20.6819C23.2343 20.9456 22.8766 21.0938 22.5036 21.0938C22.1306 21.0938 21.773 20.9456 21.5092 20.6819C21.2455 20.4181 21.0974 20.0605 21.0974 19.6875V10.8984L8.49853 23.4949C8.23435 23.7591 7.87605 23.9075 7.50244 23.9075C7.12883 23.9075 6.77053 23.7591 6.50635 23.4949C6.24217 23.2307 6.09375 22.8724 6.09375 22.4988C6.09375 22.1252 6.24217 21.7669 6.50635 21.5027L19.1052 8.90625H10.3161C9.94315 8.90625 9.58546 8.75809 9.32174 8.49437C9.05802 8.23065 8.90986 7.87296 8.90986 7.5C8.90986 7.12704 9.05802 6.76935 9.32174 6.50563C9.58546 6.24191 9.94315 6.09375 10.3161 6.09375H22.5036C22.8766 6.09375 23.2343 6.24191 23.498 6.50563C23.7617 6.76935 23.9099 7.12704 23.9099 7.5Z" fill="currentColor"/>
-									</svg></a>
-								</div>
-							</div>
-						</div>
-						<div class="col-lg-4 col-md-6 fade_left">
-							<div class="gallery-box position-relative">
-								<img class="w-100" src="assets/images/gallery/gallery-img-2.png" alt="">
-								<div class="gallery-hover-info-wrap position-absolute">
-									<div class="gallery-hover-info">
-										<h2>Competitive Pricing</h2>
-										<p>We offer services at a very competitive price range based on budget and customer requirements without compromising with the quality.</p>
-									</div>
-									<a href="project-details.html"><svg width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
-										<path d="M23.9099 7.5V19.6875C23.9099 20.0605 23.7617 20.4181 23.498 20.6819C23.2343 20.9456 22.8766 21.0938 22.5036 21.0938C22.1306 21.0938 21.773 20.9456 21.5092 20.6819C21.2455 20.4181 21.0974 20.0605 21.0974 19.6875V10.8984L8.49853 23.4949C8.23435 23.7591 7.87605 23.9075 7.50244 23.9075C7.12883 23.9075 6.77053 23.7591 6.50635 23.4949C6.24217 23.2307 6.09375 22.8724 6.09375 22.4988C6.09375 22.1252 6.24217 21.7669 6.50635 21.5027L19.1052 8.90625H10.3161C9.94315 8.90625 9.58546 8.75809 9.32174 8.49437C9.05802 8.23065 8.90986 7.87296 8.90986 7.5C8.90986 7.12704 9.05802 6.76935 9.32174 6.50563C9.58546 6.24191 9.94315 6.09375 10.3161 6.09375H22.5036C22.8766 6.09375 23.2343 6.24191 23.498 6.50563C23.7617 6.76935 23.9099 7.12704 23.9099 7.5Z" fill="currentColor"/>
-									</svg></a>
-								</div>
-							</div>
-						</div>
-						<div class="col-lg-4 col-md-6 fade_left">
-							<div class="gallery-box position-relative">
-								<img class="w-100" src="assets/images/gallery/gallery-img-3.png" alt="">
-								<div class="gallery-hover-info-wrap position-absolute">
-									<div class="gallery-hover-info">
-										<h2>Team of Experts</h2>
-										<p>Our team of experts having deep knowledge in the IT domain offers services as per latest technologies and market trends.</p>
-									</div>
-									<a href="project-details.html"><svg width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
-										<path d="M23.9099 7.5V19.6875C23.9099 20.0605 23.7617 20.4181 23.498 20.6819C23.2343 20.9456 22.8766 21.0938 22.5036 21.0938C22.1306 21.0938 21.773 20.9456 21.5092 20.6819C21.2455 20.4181 21.0974 20.0605 21.0974 19.6875V10.8984L8.49853 23.4949C8.23435 23.7591 7.87605 23.9075 7.50244 23.9075C7.12883 23.9075 6.77053 23.7591 6.50635 23.4949C6.24217 23.2307 6.09375 22.8724 6.09375 22.4988C6.09375 22.1252 6.24217 21.7669 6.50635 21.5027L19.1052 8.90625H10.3161C9.94315 8.90625 9.58546 8.75809 9.32174 8.49437C9.05802 8.23065 8.90986 7.87296 8.90986 7.5C8.90986 7.12704 9.05802 6.76935 9.32174 6.50563C9.58546 6.24191 9.94315 6.09375 10.3161 6.09375H22.5036C22.8766 6.09375 23.2343 6.24191 23.498 6.50563C23.7617 6.76935 23.9099 7.12704 23.9099 7.5Z" fill="currentColor"/>
-									</svg></a>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
+			
 
 
 			<!-- Counter End -->
