--- a/index.html
+++ b/index.html
@@ -503,7 +503,7 @@
 					<div class="row mt-60">
 						<div class="col-lg-4 col-md-6 fade_left">
 							<div class="gallery-box position-relative">
-								<img class="w-100" src="assets/images/gallery/gallery-img-1.png" alt="">
+								<img class="w-100" src="assets/images/Custom Solutions.png" alt="">
 								<div class="gallery-hover-info-wrap position-absolute">
 									<div class="gallery-hover-info">
 										<h2>Custom Solutions</h2>
@@ -517,7 +517,7 @@
 						</div>
 						<div class="col-lg-4 col-md-6 fade_left">
 							<div class="gallery-box position-relative">
-								<img class="w-100" src="assets/images/gallery/gallery-img-2.png" alt="">
+								<img class="w-100" src="assets/images/Competitive Pricing.png" alt="">
 								<div class="gallery-hover-info-wrap position-absolute">
 									<div class="gallery-hover-info">
 										<h2>Competitive Pricing</h2>
@@ -531,7 +531,7 @@
 						</div>
 						<div class="col-lg-4 col-md-6 fade_left">
 							<div class="gallery-box position-relative">
-								<img class="w-100" src="assets/images/gallery/gallery-img-3.png" alt="">
+								<img class="w-100" src="assets/images/Team of Experts.png" alt="">
 								<div class="gallery-hover-info-wrap position-absolute">
 									<div class="gallery-hover-info">
 										<h2>Team of Experts</h2>
