--- a/index.html
+++ b/index.html
@@ -496,7 +496,7 @@
 						<div class="col-lg-7">
 							<div class="section-title text-center text-anim">
 								<span>WHY CHOOSE US</span>
-								<h2>Choose Us For A Proven Path To Success & Growth</h2>
+								<h2>Choose Us For A Proven Path To Success</h2>
 							</div>
 						</div>
 					</div>
