--- a/about-us.html
+++ b/about-us.html
@@ -155,18 +155,12 @@
 						<div class="col-lg-6 col-xl-6 order-1 order-lg-0 mobt-35">
 							<div class="section-title title-anim">
 								<span>about us</span>
-								<h2>Trusted MSP Services for Streamlined IT Solutions</h2>
-								<p>We are a trusted technology partner for businesses of all sizes. Our Managed
-									Service Provider (MSP) services provide comprehensive IT support and
-									management solutions that help our clients streamline their operations, reduce
-									costs, and improve productivity.</p>
-									<p>
-									Our team of experienced IT professionals has a deep understanding of the latest
-									technologies and industry best practices. We work closely with our clients to
-									develop customized solutions that are tailored to their specific needs and
-									objectives. Our MSP services are designed to provide businesses with a
-									predictable and stable IT environment, so they can focus on what they do best -
-									running their business.</p>
+								<h2>AK DIGITALS is a part of AK Group of Companies</h2>
+								<p>We offer various services to correspond with your business requirements and assist you in attaining commercial goals. Our strategies are brainstormed and put into perspective from every corner of the square, implemented effectively to enrich development in businesses.</br></br>
+								
+									We are a set of creative intellects who strive to furnish our services with the best out of our capabilities. Our proficiency is reliable and we work in a proactive manner. We not only curate services as per your need, but we also cultivate trust and mutual understanding in order to facilitate teamwork.</br></br>
+
+									We are well-known for our compatibility with enterprises and understanding of key elements that fosters perpetual growth in businesses.	</p>
 							</div>
 							<div class="about-list-wrap mt-lg-5 mt-3 d-flex align-items-sm-center flex-column flex-sm-row">
                                 <img src="assets/images/about-info-img-1.png" alt="">
@@ -233,44 +227,31 @@
 
 			<!-- History -->
 
-			<section class="history-area pt-120 pb-120 overflow-hidden">
-				<div class="container-fluid">
-					<div class="row align-items-center gx-lg-5">
-						<div class="col-lg-6 ps-lg-0 ">
-							<div class="history-img-wrap">
-								<img class="w-100 image-scale-anim-left" src="assets/images/history-img-1.png" alt="">
+			<section class="about-area pt-120 pb-120" id="About">
+				<div class="container">
+					<div class="row justify-content-between align-items-center">
+						<div class="col-lg-6 col-xl-6 order-1 order-lg-0 mobt-35">
+							<div class="section-title">
+								<span>OUR FOUNDER</span>
+								<h2>AK DIGITALS is a part of AK Group of Companies</h2>
+								<p>We offer various services to correspond with your business requirements and assist you in attaining commercial goals. Our strategies are brainstormed and put into perspective from every corner of the square, implemented effectively to enrich development in businesses.</br></br>
+								
+									We are a set of creative intellects who strive to furnish our services with the best out of our capabilities. Our proficiency is reliable and we work in a proactive manner. We not only curate services as per your need, but we also cultivate trust and mutual understanding in order to facilitate teamwork.</br></br>
+
+									We are well-known for our compatibility with enterprises and understanding of key elements that fosters perpetual growth in businesses.	
+								</p>
 							</div>
+							<ul class="check-list mt-4">
+								<li class="fade_left">Custom Solutions</li>
+								<li class="fade_left">Team of Experts</li>
+								<li class="fade_left">Result-oriented Approach</li>
+								<li class="fade_left">Affordable Prices</li>
+							</ul>
 						</div>
-						<div class="col-lg-6 mobt-35">
-							<div class="history-info-wrap">
-								<div class="section-title title-anim">
-									<span>Our History</span>
-									<h2>Where innovation is meets excellence</h2>
-									<p>There are many variations of passages of Lorem Ipsum available, but the majority
-										have suffered alteration in some form, by injected humour</p>
-								</div>
-								<div class="listing-box history-listing-box mt-4">
-									<div class="single-listing-box fade_left">
-										<div class="listing-box-icon-wrap">
-											<img src="assets/images/icon/consulting.svg" alt="">
-										</div>
-										<div class="listing-box-info">
-											<h2>Lumina Consulting</h2>
-											<p>There are many variations of passages of Lorem Ipsum available but the
-												majority have suffered alternative</p>
-										</div>
-									</div>
-									<div class="single-listing-box fade_left">
-										<div class="listing-box-icon-wrap">
-											<img src="assets/images/icon/expert.svg" alt="">
-										</div>
-										<div class="listing-box-info">
-											<h2>Expert Engineers</h2>
-											<p>There are many variations of passages of Lorem Ipsum available but the
-												majority have suffered alternative</p>
-										</div>
-									</div>
-								</div>
+						<div class="col-lg-6 col-xl-5 order-0 order-lg-1">
+							<div class="position-relative z-index-one about-img-wrap-one">
+								<img class="w-100 " src="assets/images/about-img-1.png" alt="">
+								<img class="position-absolute z-index-minus-one top-0 end-0 about-top-one" src="assets/images/shape/about-top-1.svg" alt="">
 							</div>
 						</div>
 					</div>
