--- a/about-us.html
+++ b/about-us.html
@@ -233,12 +233,12 @@
 						<div class="col-lg-6 col-xl-6 order-1 order-lg-0 mobt-35">
 							<div class="section-title">
 								<span>OUR FOUNDER</span>
-								<h2>AK DIGITALS is a part of AK Group of Companies</h2>
-								<p>We offer various services to correspond with your business requirements and assist you in attaining commercial goals. Our strategies are brainstormed and put into perspective from every corner of the square, implemented effectively to enrich development in businesses.</br></br>
-								
-									We are a set of creative intellects who strive to furnish our services with the best out of our capabilities. Our proficiency is reliable and we work in a proactive manner. We not only curate services as per your need, but we also cultivate trust and mutual understanding in order to facilitate teamwork.</br></br>
+								<h2>Driven by Passion, Fueled by Success</h2>
+								<p> <div style="font-weight: bold;">'Self-belief and hard work will always earn you success.'</div> Our founder has righteously set a proven example for the same.</br></br>
 
-									We are well-known for our compatibility with enterprises and understanding of key elements that fosters perpetual growth in businesses.	
+									From a mobile case customisation service to providing a domain of multiple facilities, he has been a Jack of all Trades!</br></br>
+									
+									Mr. Taher is a loyal, fun-loving person who never fails to bring a smile on anyone's face. He dwells in a passion-driven and goal-oriented lifestyle. His entrepreneurial journey began at a very young age. His exuberant and optimistic charisma never fails to ignite the spark of astonishing revolutions! With the right attitude, he has achieved tremendous success! His purpose-driven mindset has set an example for others to follow their passion. Trustworthy and amiable, you can always rely on him to provide you with the best resolutions!
 								</p>
 							</div>
 							<ul class="check-list mt-4">
