--- a/about-us.html
+++ b/about-us.html
@@ -156,11 +156,11 @@
 							<div class="section-title title-anim">
 								<span>about us</span>
 								<h2>AK DIGITALS is a part of AK Group of Companies</h2>
-								<p>We offer various services to correspond with your business requirements and assist you in attaining commercial goals. Our strategies are brainstormed and put into perspective from every corner of the square, implemented effectively to enrich development in businesses.</br></br>
+								<p>We offer various services to correspond with your business requirements and assist you in attaining commercial goals. Our strategies are brainstormed and put into perspective from every corner of the square, implemented effectively to enrich development in businesses.</p>
 								
-									We are a set of creative intellects who strive to furnish our services with the best out of our capabilities. Our proficiency is reliable and we work in a proactive manner. We not only curate services as per your need, but we also cultivate trust and mutual understanding in order to facilitate teamwork.</br></br>
+									<p>We are a set of creative intellects who strive to furnish our services with the best out of our capabilities. Our proficiency is reliable and we work in a proactive manner. We not only curate services as per your need, but we also cultivate trust and mutual understanding in order to facilitate teamwork.</p>
 
-									We are well-known for our compatibility with enterprises and understanding of key elements that fosters perpetual growth in businesses.	</p>
+									<p>We are well-known for our compatibility with enterprises and understanding of key elements that fosters perpetual growth in businesses.	</p>
 							</div>
 							<div class="about-list-wrap mt-lg-5 mt-3 d-flex align-items-sm-center flex-column flex-sm-row">
                                 <img src="assets/images/about-info-img-1.png" alt="">
