--- a/team-details.html
+++ b/team-details.html
@@ -60,7 +60,7 @@
 					<div class="row align-items-center">
 						<div class="col-lg-3 hamburger-menu position-relative">
 							<div class="menu-logo-wrap">
-								<a href="index.html"><img src="assets/images/logo-2.svg" alt=""></a>
+								<a href="index.html"><img src="assets/images/ak-digitals.png" alt="" width="70%"></a>>
 							</div>
 						</div>
 						<div class="col-lg-9">
