--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 								<div class="hero-btn-wrap">
 									<a class="common-btn" href="contact.html">
 										<span>
-											Learn More
+											Contact Now
 											<svg width="15" height="14" viewBox="0 0 15 14" fill="none"
 												xmlns="http://www.w3.org/2000/svg">
 												<path
