--- a/index.html
+++ b/index.html
@@ -166,10 +166,10 @@
 											<img class="flex-shrink-0" src="assets/images/icon/team.svg" alt="">
 											<div class="counter-item-wrap">
 												<div class="counter-item position-relative d-flex align-items-center">
-													<h2 class="odometer" data-odometer-final="200">.</h2>
+													<h2 class="odometer" data-odometer-final="20">.</h2>
 													<span class="counter-sign">+</span>
 												</div>
-												<h3 class="counter-text">Team member</h3>
+												<h3 class="counter-text">Team members</h3>
 											</div>
 										</div>
 									</div>
@@ -179,10 +179,10 @@
 											<img class="flex-shrink-0" src="assets/images/icon/complete.svg" alt="">
 											<div class="counter-item-wrap">
 												<div class="counter-item position-relative d-flex align-items-center">
-													<h2 class="odometer" data-odometer-final="10">.</h2>
-													<span class="counter-sign">k+</span>
+													<h2 class="odometer" data-odometer-final="300">.</h2>
+													<span class="counter-sign">+</span>
 												</div>
-												<h3 class="counter-text">Complete project</h3>
+												<h3 class="counter-text">projects Completed</h3>
 											</div>
 										</div>
 									</div>
@@ -192,10 +192,10 @@
 											<img class="flex-shrink-0" src="assets/images/icon/client.svg" alt="">
 											<div class="counter-item-wrap">
 												<div class="counter-item position-relative d-flex align-items-center">
-													<h2 class="odometer" data-odometer-final="900">.</h2>
+													<h2 class="odometer" data-odometer-final="100">.</h2>
 													<span class="counter-sign">+</span>
 												</div>
-												<h3 class="counter-text">Client review</h3>
+												<h3 class="counter-text">Happy Clients</h3>
 											</div>
 										</div>
 									</div>
