--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 													<h2 class="odometer" data-odometer-final="20">.</h2>
 													<span class="counter-sign">+</span>
 												</div>
-												<h3 class="counter-text">Team members</h3>
+												<h3 class="counter-text">Team Members</h3>
 											</div>
 										</div>
 									</div>
@@ -182,7 +182,7 @@
 													<h2 class="odometer" data-odometer-final="300">.</h2>
 													<span class="counter-sign">+</span>
 												</div>
-												<h3 class="counter-text">projects Completed</h3>
+												<h3 class="counter-text">Projects Completed</h3>
 											</div>
 										</div>
 									</div>
