--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
 						<div class="col-lg-6 mobt-35">
 							<div class="history-info-wrap">
 								<div class="section-title title-anim">
-									<span>Our History</span>
+									<span>our expertise</span>
 									<h2>Oriented Digital Marketing Services</h2>
 									<p>Get the best digital marketing services to elevate your business towards growth and success.Build your success story with our dgital marketing services.</p>
 								</div>
