--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
 							<div class="history-info-wrap">
 								<div class="section-title title-anim">
 									<span>our expertise</span>
-									<h2>Oriented Digital Marketing Services</h2>
+									<h2>Result Oriented Digital Marketing Services</h2>
 									<p>Get the best digital marketing services to elevate your business towards growth and success.Build your success story with our dgital marketing services.</p>
 								</div>
 								<div class="listing-box history-listing-box mt-4">
