--- a/about-us.html
+++ b/about-us.html
@@ -349,7 +349,7 @@
 							<div class="footer-widget footer-black">
 								<h2 class="footer-title">CONTACT INFO</h2>
 								<ul class="footer-list footer-address">
-									<li>AK Digitals, 412, Devi Singh Marg, Barwani, Madhya Pradesh - 451551.</li>
+									<li>AK Digitals India,<br> 412, Devi Singh Marg, Barwani, Madhya Pradesh - 451551.</li>
 									<li>
 										<a href="tel:7045550127">
 											<svg width="15" height="15" viewBox="0 0 15 15" fill="none"
