--- a/Website-Development.html
+++ b/Website-Development.html
@@ -163,12 +163,12 @@
                                 <h2 class="sidebar-title">Get in touch</h2>
 								<div class="single-sidebar bg-color-of-white border-0 p-0 overflow-hidden">
 									<ul class="service-sidebar-list">
-                                        <li>Regular start with the product <i class="bi bi-chevron-right"></i></li>
-                                        <li>Stock market bering up <i class="bi bi-chevron-right"></i></li>
-                                        <li>Regular start with the product <i class="bi bi-chevron-right"></i></li>
-                                        <li>Precious metal stand <i class="bi bi-chevron-right"></i></li>
-                                        <li>Laboratory is the big service <i class="bi bi-chevron-right"></i></li>
-                                        <li>Eider Services needed <i class="bi bi-chevron-right"></i></li>
+                                        <a href="Website-Development.html"><li>Website Development<i class="bi bi-chevron-right"></i></li></a>
+                                        <li>Logo Designing<i class="bi bi-chevron-right"></i></li>
+                                        <li>Social Media Management <i class="bi bi-chevron-right"></i></li>
+                                        <li>Digital Marketing <i class="bi bi-chevron-right"></i></li>
+                                        <li>App Development <i class="bi bi-chevron-right"></i></li>
+                                        <li>Business Consultancy <i class="bi bi-chevron-right"></i></li>
                                     </ul>
 								</div>
 								<div class="single-sidebar bg-color-of-white border-0">
