--- a/Logo Designing.html
+++ b/Logo Designing.html
@@ -160,7 +160,7 @@
                     <div class="row">
                         <div class="col-lg-4">
 							<div class="sidebar-wrap sidebar-wrap-project">
-                                <h2 class="sidebar-title">Get in touch</h2>
+                                <h2 class="sidebar-title">Other Services</h2>
 								<div class="single-sidebar bg-color-of-white border-0 p-0 overflow-hidden">
 									<ul class="service-sidebar-list">
                                         <a href="Website-Development.html"><li>Website Development<i class="bi bi-chevron-right"></i></li></a>
