--- a/Logo-Designing.html
+++ b/Logo-Designing.html
@@ -164,11 +164,11 @@
 								<div class="single-sidebar bg-color-of-white border-0 p-0 overflow-hidden">
 									<ul class="service-sidebar-list">
                                         <a href="Website-Development.html"><li>Website Development<i class="bi bi-chevron-right"></i></li></a>
-                                        <li>Logo Designing<i class="bi bi-chevron-right"></i></li>
-                                        <li>Social Media Management <i class="bi bi-chevron-right"></i></li>
-                                        <li>Digital Marketing <i class="bi bi-chevron-right"></i></li>
-                                        <li>App Development <i class="bi bi-chevron-right"></i></li>
-                                        <li>Business Consultancy <i class="bi bi-chevron-right"></i></li>
+                                        <a href="Logo-Designing.html"><li>Logo Designing<i class="bi bi-chevron-right"></i></li></a>
+                                        <a href="Social-Media-Management.html"><li>Social Media Management <i class="bi bi-chevron-right"></i></li></a>
+                                        <a href="Digital-Marketing .html"><li>Digital Marketing <i class="bi bi-chevron-right"></i></li></a>
+                                       <a href="App-Development.html"> <li>App Development <i class="bi bi-chevron-right"></i></li></a>
+                                        <a href="Business-Consultancy.html"><li>Business Consultancy <i class="bi bi-chevron-right"></i></li></a>
                                     </ul>
 								</div>
 								<div class="single-sidebar bg-color-of-white border-0">
