--- a/Website-Development.html
+++ b/Website-Development.html
@@ -180,7 +180,8 @@
 											</svg>
 											<div class="contact-info">
 												<h3>location</h3>
-												<p>Dhaka 102, utl 1216, road 45 house of street</p>
+												<p>AK Digitals India,
+													412, Devi Singh Marg, Barwani, Madhya Pradesh - 451551.</p>
 											</div>
 										</li>
 										<li>
@@ -189,8 +190,7 @@
 											</svg>
 											<div class="contact-info">
 												<h3>Call us</h3>
-												<p><a href="tel:7045550127">2590 - 080 - 365 45 256</a></p>
-												<p><a href="tel:7045550127">1234 - 023 - 850</a></p>
+												<p><a href="tel:7045550127">+91 81206 69371</a></p>
 											</div>
 										</li>
 										<li>
@@ -199,8 +199,7 @@
 											</svg>
 											<div class="contact-info">
 												<h3>Email</h3>
-												<p><a href="mailto:infoname@mail.com">m0023yourmail.com</a></p>
-												<p><a href="mailto:infoname@mail.com">IJMm002ail.com</a></p>
+												<p><a href="mailto:infoname@mail.com">akdigitalsindia@gmail.com</a></p>
 											</div>
 										</li>
 									</ul>
