--- a/about-us.html
+++ b/about-us.html
@@ -202,19 +202,19 @@
                         <div class="col-lg-12">
                             <div class="brand-item-wrap d-flex flex-wrap">
                                 <div class="item fade_left">
-                                    <img src="assets/images/brand/brand-1.svg" alt="">
+                                    <img src="assets/images/brand/logo-1.png" alt="">
                                 </div>
                                 <div class="item fade_left">
-                                    <img src="assets/images/brand/brand-2.svg" alt="">
+                                    <img src="assets/images/brand/logo-2.png" alt="">
                                 </div>
                                 <div class="item fade_left">
-                                    <img src="assets/images/brand/brand-3.svg" alt="">
+                                    <img src="assets/images/brand/logo-3.png" alt="">
                                 </div>
                                 <div class="item fade_left">
-                                    <img src="assets/images/brand/brand-4.svg" alt="">
+                                    <img src="assets/images/brand/logo-4.png" alt="">
                                 </div>
                                 <div class="item fade_left">
-                                    <img src="assets/images/brand/brand-5.svg" alt="">
+                                    <img src="assets/images/brand/logo-55.png" alt="">
                                 </div>
                             </div>
                         </div>
