--- a/about-us.html
+++ b/about-us.html
@@ -202,19 +202,19 @@
                         <div class="col-lg-12">
                             <div class="brand-item-wrap d-flex flex-wrap">
                                 <div class="item fade_left">
-                                    <img src="assets/images/brand/logo-1.png" alt="">
+                                    <img src="assets/images/brand/logo-1.jpg" alt="">
                                 </div>
                                 <div class="item fade_left">
-                                    <img src="assets/images/brand/logo-2.png" alt="">
+                                    <img src="assets/images/brand/logo-2.jpg" alt="">
                                 </div>
                                 <div class="item fade_left">
-                                    <img src="assets/images/brand/logo-3.png" alt="">
+                                    <img src="assets/images/brand/logo-3.jpg" alt="">
                                 </div>
                                 <div class="item fade_left">
-                                    <img src="assets/images/brand/logo-4.png" alt="">
+                                    <img src="assets/images/brand/logo-4.jpg" alt="">
                                 </div>
                                 <div class="item fade_left">
-                                    <img src="assets/images/brand/logo-55.png" alt="">
+                                    <img src="assets/images/brand/logo-5.jpg" alt="">
                                 </div>
                             </div>
                         </div>
