--- a/Website-Development.html
+++ b/Website-Development.html
@@ -223,7 +223,7 @@
 										</p>
 										<h2 class="details-info-title mt-4 mb-2 d-inline-block">Service Include</h2>
                                     <ul class="details-list details-list-project mt-3">
-                                        <li><h2>Custom website design:</h2> Our team can create a unique and professional website
+                                        <li><span style="font-weight: bolder;">Custom website design:</span>Our team can create a unique and professional website
 											design that reflects your brand and meets your specific requirements.</li>
                                         <li>Content management system (CMS) development: We can develop and integrate
 											a content management system (CMS) that allows you to easily manage and
