--- a/Website-Development.html
+++ b/Website-Development.html
@@ -225,17 +225,17 @@
                                     <ul class="details-list details-list-project mt-3">
                                         <li><span style="font-weight: bolder;">Custom website design:</span>Our team can create a unique and professional website
 											design that reflects your brand and meets your specific requirements.</li>
-                                        <li>Content management system (CMS) development: We can develop and integrate
+                                        <li><span style="font-weight: bolder;">Content management system (CMS) development:</span> We can develop and integrate
 											a content management system (CMS) that allows you to easily manage and
 											update your website content.</li>
-                                        <li>E-commerce development: Our experts can help you set up an online store and
+                                        <li><span style="font-weight: bolder;">E-commerce development:</span> Our experts can help you set up an online store and
 											integrate payment gateways, making it easy for you to sell products and services
 											online.</li>
-										<li>AR/VR App Development: We create augmented reality and virtual reality apps for
+										<li><span style="font-weight: bolder;">AR/VR App Development:</span> We create augmented reality and virtual reality apps for
 											a more immersive user experience.</li>
-										<li>Blockchain App Development: We develop decentralized apps using blockchain
+										<li><span style="font-weight: bolder;">Blockchain App Development:</span> We develop decentralized apps using blockchain
 											technology for secure and transparent transactions.</li>
-										<li>Chatbot Development: We build AI-powered chatbots for a conversational and
+										<li><span style="font-weight: bolder;">Chatbot Development:</span> We build AI-powered chatbots for a conversational and
 											personalized user experience.</li>					
                                     </ul>
 									</div>
