--- a/Website-Development.html
+++ b/Website-Development.html
@@ -209,7 +209,7 @@
                         <div class="col-lg-8 mobt-35">
 							<div class="details-info-wrap ">
                                 <img class="project-thumb-img w-100 " src="assets/images/project/Website Development.png" alt="">
-								<h3 class="details-info-title mt-4 mb-2 d-inline-block">Website Development</h3>
+								<h3 class="details-info-title mt-4 mb-2 d-inline-block" style="color: #F44730;">Website Development</h3>
 								<p class="details-info-text">AK Digitals provides comprehensive website development services that allow you
 									to take your business online quickly and easily. Whether you're a small business or
 									a large corporation, AK Digitals has the capabilities to help you succeed online.</p>
