--- a/Website-Development.html
+++ b/Website-Development.html
@@ -215,13 +215,13 @@
 									a large corporation, AK Digitals has the capabilities to help you succeed online.</p>
 								<div class="row mt-3">
 									<div class="col-md-8">
-										<h2 class="details-info-title mt-4 mb-2 d-inline-block">High Performance & Reliability</h2>
+										<h2 class="details-info-title mt-4 mb-2 d-inline-block" style="color: #F44730;">High Performance & Reliability</h2>
 								    <p class="details-info-text mt-0">We strive for maximum performance and reliability when it comes to website
 										development. Our team is committed to delivering high-quality results with fast
 										turnaround times at competitive rates. We also offer ongoing maintenance and
 										support services for all our clients.
 										</p>
-										<h2 class="details-info-title mt-4 mb-2 d-inline-block">Service Include</h2>
+										<h2 class="details-info-title mt-4 mb-2 d-inline-block" style="color: #F44730;">Service Include</h2>
                                     <ul class="details-list details-list-project mt-3">
                                         <li><span style="font-weight: bolder;">Custom website design:</span> Our team can create a unique and professional website
 											design that reflects your brand and meets your specific requirements.</li>
