--- a/about-us.html
+++ b/about-us.html
@@ -72,11 +72,11 @@
 										<li class="has-child-menu"><a href="javascript:void(0)">Services</a>
 											<ul>
 												<li><a href="index.html">Website Development</a></li>
-												<li><a href="home-two.html">Logo Designing</a></li>
-												<li><a href="home-three.html">Social Media Management</a></li>
-												<li><a href="home-three.html">Digital Marketing</a></li>
-												<li><a href="home-three.html">App Development</a></li>
-												<li><a href="home-three.html">Business Consultancy</a></li>
+												<li><a href="Logo-Designing.html">Logo Designing</a></li>
+												<li><a href="Social-Media-Management.html">Social Media Management</a></li>
+												<li><a href="Digital-Marketing .html">Digital Marketing</a></li>
+												<li><a href="App-Development.html">App Development</a></li>
+												<li><a href="Business-Consultancy.html">Business Consultancy</a></li>
 											</ul>
 										</li>
 										<li><a href="contact.html">Contact</a></li>
