--- a/about-us.html
+++ b/about-us.html
@@ -68,7 +68,7 @@
 								<div class="mainmenu text-right">
 									<ul>
 										<li><a href="index.html">Home</a></li>
-										<li><a href="#About">About</a></li>
+										<li><a href="about-us.html">About</a></li>
 										<li class="has-child-menu"><a href="javascript:void(0)">Services</a>
 											<ul>
 												<li><a href="index.html">Website Development</a></li>
