--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 										<li><a href="about-us.html">About</a></li>
 										<li class="has-child-menu"><a href="javascript:void(0)">Services</a>
 											<ul>
-												<li><a href="index.html">Website Development</a></li>
+												<li><a href="Website-Development.html">Website Development</a></li>
 												<li><a href="Logo-Designing.html">Logo Designing</a></li>
 												<li><a href="Social-Media-Management.html">Social Media Management</a></li>
 												<li><a href="Digital-Marketing .html">Digital Marketing</a></li>
